# conjunto

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  development.md  faq.md  hooks.py  index.md  mgmt_cmds.md  settings.md  urls.md
docs/components/: toasts.md
docs/usage/: components.md  installation.md  logging.md  maintenance_mode.md  settings.md  urls.md
scripts/: gen_ref_pages.py
src/conjunto/: __init__.py  admin.py  apps.py  colors.py  context_processors.py  fields.py  gdaps_hooks.py  htmx.py  menus.py  middleware.py  models.py  registry.py  tables.py  tools.py  urls.py  views.py
src/conjunto/api/: interfaces.py
src/conjunto/api/interfaces/: __init__.py  settings.py
src/conjunto/audit_log/: __init__.py  context.py  formatter.py  gdaps_hooks.py  log_actions.py  models.py  registry.py
src/conjunto/audit_log/migrations/: 0001_initial.py  0002_modellogentry_public_and_more.py
src/conjunto/cms/: README.md  __init__.py  admin.py  apps.py  models.py
src/conjunto/cms/migrations/: 0001_initial.py  0002_delete_staticversionedpage_alter_licensepage_options_and_more.py  0003_rename_licensepage_termsconditionspage.py  0004_alter_termsconditionspage_options.py  0005_alter_privacypage_version_and_more.py  0006_staticpage_name.py
src/conjunto/components/: __init__.py  list.py
src/conjunto/components/default/: __init__.py
src/conjunto/components/default/card/: __init__.py  card.html
src/conjunto/components/default/modal/: __init__.py  modal.html
src/conjunto/components/default/settings_widget/: __init__.py  settings_widget.html
src/conjunto/components/default/toast/: __init__.py  toast.html
src/conjunto/components/default/toasts/: __init__.py  toasts.html  toasts.js
src/conjunto/components/default/updatable/: __init__.py  updatable.html
src/conjunto/components/settings/account_section_widget/: __init__.py  account_section_widget.html
src/conjunto/files/: storage.py
src/conjunto/forms/: __init__.py  widgets.py
src/conjunto/htmx/: views.py
src/conjunto/http/: __init__.py
src/conjunto/locale/de/LC_MESSAGES/: django.mo  django.po
src/conjunto/management/commands/: reload_permissions.py  show_actions.py  update_libraries.py  update_permissions.py
src/conjunto/menu/: __init__.py
src/conjunto/migrations/: 0001_initial.py  0002_delete_licensepage_delete_privacypage_and_more.py  0003_add_vendor.py  0004_privacypage_staticpage_termsconditionspage.py  0005_delete_privacypage_delete_staticpage_and_more.py  0006_vendor_website_alter_vendor_address_and_more.py
src/conjunto/static/conjunto/css/: bootstrap.css.map  conjunto.css  tabler.css
src/conjunto/static/conjunto/js/: conjunto.js  datepicker.js  tabler.js  tabler.min.js  toasts.js
src/conjunto/tabler/: apps.py  colors.py
src/conjunto/templates/conjunto/: base.html  card_page.html  generic_form.html  html.html  lightbox.html  login.html  modal-form.html  modal_confirm_delete.html  modal_form.html  offcanvas_left.html  settings.html  toast.html
src/conjunto/templates/conjunto/cms/: staticpage.html
src/conjunto/templates/conjunto/components/: button.html  card.html  datagrid.html  datagrid_file.html  datagrid_item.html  link.html  list.html  list_group_action.html  list_item.html  tab_card.html  updatable.html  updateable.html
src/conjunto/templates/conjunto/layouts/: base.html  empty.html  html.html  settings_section.html  settings_subsection.html  vertical.html
src/conjunto/templatetags/: conjunto.py
src/tabler/: README.md  colors.py  context_processors.py
src/tabler/templates/tabler/: base.html  empty.html
src/tabler/templates/tabler/includes/: navbar.html
tests/: conftest.py  test_group_permissions.py  test_logging.py  test_singleton_model.py  test_tools.py
tests/test_app/: migrations.py  models.py
(+6 files in other folders)
