[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conjunto"
dynamic = ["version"]
description = "Django application framework/helpers using HTMX, tabler.io, tables2, crispy-forms & more."
authors = [
    { name = "Christian González", email = "christian.gonzalez@nerdocs.at" }
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["python", "django", "htmx", "framework", "i18n"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python"
]
dependencies = [
    "django~=4.2",
    "django-countries",
    "django-phonenumber-field[phonenumberslite]",
    "django-crispy-forms",
    "crispy-bootstrap5",
    "django-htmx",
    "django-tables2",
    "django-versionfield",
    "django-markdownify",
    "django-web-components",
    "django-statici18n",
    "gdaps>=0.8.5",
    "django-extensions>=3.2",
    "Pillow",
]



[project.urls]
Homepage = "https://github.com/nerdocs/conjunto"
#Documentation = "https://conjunto.readthedocs.io"
Repository = "https://github.com/nerdocs/conjunto"


[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
    "pre-commit",
    "black",
]
doc = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[tool.setuptools.dynamic]
version = {attr = "conjunto.__version__"}